# stylists-ai-backend-cert

./: .env.example  .gitignore  CLAUDE.md  config.py  main.py  pyproject.toml
app/: config.py  main.py  registry.py
app/agent/: graph.py  prompts.py  state.py
app/rag/: ingest.py
app/tools/: search_trends.py  style_knowledge.py
app/utils/: streaming.py
docs/: PRD.md  build_plan.md  frontend_handoff.md  tech_architecture.md
docs/plans/: 2026-02-26-cert-build-design.md  2026-02-26-phase1-implementation.md  memory-system.md
knowledge/: deep_research_prompts.md
knowledge/body_shapes/: architecture_of_style_inclusive_body_shape_guide_gemini.md  body_shape_dressing_with_confidence_cowork.md  body_shape_proportion_balance_silhouette_claude.md  body_shape_styling_balance_line_proportion_openai.md
knowledge/color_theory/: color_theory_complete_guide_claude.md  color_theory_seasonal_analysis_practical_outfit_use_openai.md  comprehensive_guide_seasonal_color_analysis_gemini.md  seasonal_color_analysis_comprehensive_guide_cowork.md
knowledge/fundamentals/: clothing_fundamentals_comprehensive_guide_cowork.md  clothing_fundamentals_personal_styling_openai.md  complete_guide_clothing_fundamentals_claude.md  master_fundamentals_personal_styling_textile_analysis_gemini.md
knowledge/occasion_dressing/: complete_modern_dress_code_guide_cowork.md  (+3 more)
rag/: chunking.py  loader.py  registry.py  retrieval.py  vectorstore.py
scripts/: ingest_to_qdrant.py
tests/: conftest.py  test_agent.py  test_api.py  test_rag_ingest.py  test_tools.py
(+8 files in other folders)
